--- a/.github/ISSUE_TEMPLATE/bugs_report.yml
+++ b/.github/ISSUE_TEMPLATE/bugs_report.yml
@@ -1,62 +1,35 @@
-name: Bug Report
-description: File a bug report
-title: "[Bug]: "
-labels: ["bug", "triage"]
-assignees:
-  - octocat
+name: 機能開発
+description: 機能追加、機能作成の際に使用するテンプレート
+title: "タイトル"
+labels: ["Eextract", "Transform", "Load", "DWH", "DataMart"]
 body:
   - type: markdown
     attributes:
       value: |
         Thanks for taking the time to fill out this bug report!
   - type: input
-    id: contact
+    id: discussionURL
     attributes:
-      label: Contact Details
-      description: さらに情報が必要な場合、どのように連絡すればよいでしょうか？
-      placeholder: ex. email@example.com
-    validations:
-      required: false
-  - type: textarea
-    id: what-happened
-    attributes:
-      label: What happened?
-      description: また、生じると期待されていたことは何でしょうか？
-      placeholder: Tell us what you see!
-      value: "バグが生じました!"
+      label: 関連discussion
+      description: 関連discussionのURLを入力してください。
+      placeholder: ex. URL
     validations:
       required: true
-  - type: dropdown
-    id: version
-    attributes:
-      label: Version
-      description: 実行していたソフトウェアのバージョンは?
-      options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
-    validations:
-      required: true
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
   - type: textarea
-    id: logs
+    id: function-description
     attributes:
-      label: Relevant log output
-      description: 関連するログの出力をコピーしてペーストしてください。 これは自動的にコードにフォーマットされるので、バックティックは不要です。
-      render: shell
+      label: 機能開発方針及び設計
+      description: 機能開発の方針及び設計について記載してください。
+      placeholder: 機能開発の方針及び設計について記載してください。
+      validations:
+        required: true
   - type: checkboxes
-    id: terms
+    id: checklist
     attributes:
-      label: Code of Conduct
-      description: このIssueをサブミットすることで、あなたは私たちの [行動規範](https://example.com)に同意したことになります。
+      label: チェックリスト
+      description: 機能開発完了条件
       options:
-        - label: I agree to follow this project's Code of Conduct
+        - label: 関連リンクURLを記載
+          required: true
+        - label: 機能概要記載
           required: true
