--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -22,6 +22,7 @@ jobs:
           reviewdog_version: latest
 
       - run: pip install black==23.1.0
+      - run: pip install bandit==1.7.5
       - run: pip install poetry==1.4.0
       - run: poetry install
 
@@ -34,3 +35,6 @@ jobs:
           fail_on_error: true
           filter_mode: nofilter
           workdir: ${{ matrix.workdir }}
+      
+      - name: bandit
+        run: bandit -r .
