--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+black = "23.1.0"
+bandit = "^1.7.5"
+pip-audit = "^2.5.4"
 
 
 [build-system]
