ワークフロー上でセットアップ2

--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -13,14 +13,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-python@v4
         with:
           python-version: "3.8"
 
-      - name: Setup Reviewdog with action
-        uses: reviewdog/action-setup@v1
-        with:
-          reviewdog_version: latest
+      # - name: Setup Reviewdog with action
+      #   uses: reviewdog/action-setup@v1
+      #   with:
+      #     reviewdog_version: latest
 
       - name: Setup reviewdog on Github Action
         run: |
