--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -18,24 +18,28 @@ jobs:
         with:
           python-version: "3.8"
 
-      # - name: Setup Reviewdog with action
-      #   uses: reviewdog/action-setup@v1
-      #   with:
-      #     reviewdog_version: latest
+      - name: Setup Reviewdog with action
+        uses: reviewdog/action-setup@v1
+        with:
+          reviewdog_version: latest
 
-      - name: Setup reviewdog on Github Action
-        run: |
-          mkdir -p $HOME/bin && curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh| sh -s -- -b $HOME/bin
-          echo ::add-path::$HOME/bin
+      # - name: Setup reviewdog on Github Action
+      #   run: |
+      #     mkdir -p $HOME/bin && curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh| sh -s -- -b $HOME/bin
+      #     echo ::add-path::$HOME/bin
 
       - name: Install Libraries
         run: |
           pip install black==23.1.0 bandit==1.7.5 poetry==1.4.0
+          poetry plugin add poetry-audit-plugin
           poetry install
       
-      - name: Security Check by bandit
-        run: |
-          bandit -r . | reviewdog -efm="%f:%l:%c: %m" -reporter=github-pr-review
+      # - name: Security Check by bandit
+      #   run: |
+      #     bandit -r . | reviewdog -efm="%f:%l:%c: %m" -reporter=github-pr-review
+
+      - name: Check Packages
+        run: poetry audit | reviewdog -reporter=github-pr-review
 
       - name: black
         uses: reviewdog/action-black@v3
