--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -39,6 +39,8 @@ jobs:
       #     bandit -r . | reviewdog -efm="%f:%l:%c: %m" -reporter=github-pr-review
 
       - name: Check Packages
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
         run: poetry audit | reviewdog -reporter=github-pr-review
 
       - name: black
