--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install Libraries
         run: |
           pip install black==23.1.0 bandit==1.7.5 poetry==1.4.0
+          
+      - name: POetry Install
+        run: |    
           poetry plugin add poetry-audit-plugin
           poetry install
       
