--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -34,7 +34,7 @@ jobs:
           
       - name: POetry Install
         run: |    
-          poetry plugin self add poetry-audit-plugin
+          poetry self add poetry-audit-plugin
           poetry install
       
       # - name: Security Check by bandit
