--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -45,7 +45,8 @@ jobs:
       - name: Check Packages
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
-        run: poetry run pip-audit | reviewdog -reporter=github-pr-review
+        run: poetry run pip-audit
+        #  | reviewdog -reporter=github-pr-review
 
       # - name: black
       #   uses: reviewdog/action-black@v3
