--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -46,7 +46,7 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
         run: |
-          poetry run pip-audit | reviewdog -reporter=github-pr-review -level=warning
+          poetry run pip-audit | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review -level=warning
         #  | reviewdog -reporter=github-pr-review
 
       # - name: black
