--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -47,6 +47,13 @@ jobs:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
         run: |
           poetry run pip-audit | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review -level=warning
+
+
+      - name: Check Packages Poetry audit
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
+        run: |
+          poetry audit | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review -level=warning
         #  | reviewdog -reporter=github-pr-review
 
       # - name: black
