--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -42,11 +42,11 @@ jobs:
       #   run: |
       #     bandit -r . | reviewdog -efm="%f:%l:%c: %m" -reporter=github-pr-review
 
-      - name: Check Packages
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
-        run: |
-          poetry run pip-audit | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review -level=warning
+      # - name: Check Packages
+      #   env:
+      #     REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
+      #   run: |
+      #     poetry run pip-audit | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review -level=warning
 
 
       - name: Check Packages Poetry audit
@@ -55,6 +55,12 @@ jobs:
         run: |
           poetry audit | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review -level=warning
         #  | reviewdog -reporter=github-pr-review
+
+      - name: Test with pytest
+        run: |
+          poetry run pytest tests -v --cov=tests --cov-fail-under=80
+
+
 
       # - name: black
       #   uses: reviewdog/action-black@v3
