--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Test with pytest
         run: |
-          poetry run pytest tests -v --cov=tests --cov-fail-under=80
+          poetry run pytest tests -v --cov=src/ --cov-fail-under=80
 
 
 
