--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -57,8 +57,10 @@ jobs:
         #  | reviewdog -reporter=github-pr-review
 
       - name: Test with pytest
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
         run: |
-          poetry run pytest tests -v --cov=src/ --cov-fail-under=80
+          poetry run pytest tests -v --cov=src/ --cov-fail-under=80 | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review
 
 
 
