--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -60,7 +60,8 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
         run: |
-          poetry run pytest tests -v --cov=src/ --cov-fail-under=80 | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review
+          poetry run pytest tests -v --cov=src/ --cov-fail-under=80
+          reviewdog -efm="%f:%l: %m" -reporter=github-pr-review
 
 
 
