--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,11 +24,13 @@ jobs:
         run: |    
           poetry self add poetry-audit-plugin
           poetry install
-      # - name: Install dependencies
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     pip install flake8 pytest pytest-cov
-      #     if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Test with pytest
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
+        run: |
+          poetry run pytest tests -v --cov=src/ --cov-fail-under=80
+          reviewdog -efm="%f:%l: %m" -reporter=github-pr-review
 
       - name: Build coverage file
         run: |
