--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -1,10 +1,10 @@
-name: Reviewdog
+name: code-and-packages-check
 on: [pull_request]
 permissions:
   pull-requests: write
 
 jobs:
-  python_check:
+  code_check:
     strategy:
       matrix:
         workdir:
@@ -33,6 +33,21 @@ jobs:
           poetry self add poetry-audit-plugin
           poetry install
       
-      - name: Security Check by bandit
+      - name: Security check of source code by bandit
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
         run: |
           bandit -r src/ | reviewdog -efm="%f:%l:%c: %m" -reporter=github-pr-review
+
+      - name: Security check of packages by pip-audit
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
+        run: |
+          poetry run pip-audit | reviewdog -efm="%f:%l:%c: %m" -reporter=github-pr-review
+
+      # - name: Check Packages Poetry audit
+      #   env:
+      #     REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
+      #   run: |
+      #     poetry audit | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review -level=warning
+        #  | reviewdog -reporter=github-pr-review
