--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -1,4 +1,4 @@
-name: Reviewdog
+name: form-check
 on: [pull_request]
 permissions:
   pull-requests: write
@@ -24,11 +24,6 @@ jobs:
         with:
           reviewdog_version: latest
 
-      # - name: Setup reviewdog on Github Action
-      #   run: |
-      #     mkdir -p $HOME/bin && curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh| sh -s -- -b $HOME/bin
-      #     echo ::add-path::$HOME/bin
-
       - name: Install Libraries
         run: |
           pip install black==23.1.0 bandit==1.7.5 poetry==1.4.0 poetry-audit-plugin==0.3.0
@@ -37,27 +32,6 @@ jobs:
         run: |    
           poetry self add poetry-audit-plugin
           poetry install
-
-      # - name: Check Packages
-      #   env:
-      #     REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
-      #   run: |
-      #     poetry run pip-audit | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review -level=warning
-
-
-      - name: Check Packages Poetry audit
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
-        run: |
-          poetry audit | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review -level=warning
-        #  | reviewdog -reporter=github-pr-review
-
-      - name: Test with pytest
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
-        run: |
-          poetry run pytest tests -v --cov=src/ --cov-fail-under=80
-          reviewdog -efm="%f:%l: %m" -reporter=github-pr-review
 
       - name: black
         uses: reviewdog/action-black@v3
