--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -37,7 +37,8 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
         run: |
-          poetry run bandit -r src/ | reviewdog -efm="%f:%l:%c: %m" -reporter=github-pr-review
+          poetry run bandit -r src/
+          reviewdog -efm="%f:%l:%c: %m" -reporter=github-pr-review
 
       - name: Security check of packages by pip-audit
         env:
