--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -30,21 +30,23 @@ jobs:
           poetry self add poetry-audit-plugin
           poetry install
 
-      - uses: reviewdog/action-pytest@v1
-        with:
-          github_token: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
-          # Change reviewdog reporter if you need [github-pr-check,github-check,github-pr-review].
-          reporter: github-pr-review
-          # Change reporter level if you need.
-          # GitHub Status Check won't become failure with warning.
-          level: warning
-      # - name: Test with pytest
-      #   env:
-      #     REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
-      #   run: |
-      #     poetry run pytest tests -v --cov=src/ --cov-fail-under=80
-      #     reviewdog -efm="%f:%l: %m" -reporter=github-pr-review
+      - name: Test with pytest
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          poetry run pytest tests -v --cov=src/ --cov-fail-under=80 | tee pytest-coverage.txt
 
+# 該当するアクションがなさそう
+# Unable to resolve action `reviewdog/action-pytest@v1`, unable to find version `v1`
+      # - uses: reviewdog/action-pytest@v1
+      #   with:
+      #     github_token: ${{ secrets.REVIEWDOG_GITHUB_TOKEN }}
+      #     # Change reviewdog reporter if you need [github-pr-check,github-check,github-pr-review].
+      #     reporter: github-pr-review
+      #     # Change reporter level if you need.
+      #     # GitHub Status Check won't become failure with warning.
+      #     level: warning
+# MishaKav/pytest-coverage-comment@mainによるレポート作成とPRコメント作成
       # - name: Build coverage file
       #   run: |
       #     poetry run pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=src/ tests | tee pytest-coverage.txt
